[tool.poetry]
name = "project01"
version = "0.1.0"
description = "sample project"
authors = ["mozkzki"]

[tool.poetry.dependencies]
python = "^3.8"
injector = "0.15.0"
six = "1.11.0"
docutils = "0.14"
jmespath = "0.9.3"
python-dateutil = "2.7.5"
pylint = "2.4.1"
pytest-env = "^0.6.2"
pytest-cov = "^2.12.0"
requests = "^2.25.1"
botocore = "^1.20.77"
boto3 = "^1.17.77"
s3transfer = "^0.4.2"
moto = "^2.0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "project01:main"
